--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     compile "com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"
     provided "com.google.auto.factory:auto-factory:$autoFactoryVersion"
     annotationProcessor "com.google.auto.factory:auto-factory:$autoFactoryVersion"
+    annotationProcessor "org.androidannotations:androidannotations:$androidannotationsVersion"
+    compile "org.androidannotations:androidannotations-api:$androidannotationsVersion"
 }
 
 apply plugin: 'com.google.gms.google-services'
